--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "push": "/usr/bin/git add . && /usr/bin/git commit -m 'update' && /usr/bin/git push"
   },
   "dependencies": {
+    "@react-icons/all-files": "^4.1.0",
     "@types/node": "20.5.9",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
@@ -20,7 +21,6 @@
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.10.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   }
